[package]
name = "ranked_choice"
version = "0.1.0"
authors = ["Timothy Miller <miller.tim108@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/TangoYankee/ranked_choice/"
description = "Run ranked choice elections"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
